small fix for popup size on small screens

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -286,9 +286,9 @@ div[id*='fimBreach'] .esriLegendLayerLabel {
 .floodToolsClass {
     position:absolute;
     /*top:100px;
-    left:100px;*/
+    left:100px;
     width:650px;
-    height:450px;
+    height:450px;*/
     z-index:3;
     color: black;
     background-color: rgb(255,255,255);
